docs-archive/apache-airflow-providers-apache-spark/6.1.0/_sources/_api/airflow/providers/apache/spark/hooks/spark_submit/index.rst.txt
airflow.providers.apache.spark.hooks.spark_submit
=================================================

.. py:module:: airflow.providers.apache.spark.hooks.spark_submit


Attributes
----------

.. autoapisummary::

   airflow.providers.apache.spark.hooks.spark_submit.DEFAULT_SPARK_BINARY
   airflow.providers.apache.spark.hooks.spark_submit.ALLOWED_SPARK_BINARIES


Classes
-------

.. autoapisummary::

   airflow.providers.apache.spark.hooks.spark_submit.SparkSubmitHook


Module Contents
---------------

.. py:data:: DEFAULT_SPARK_BINARY
   :value: 'spark-submit'


.. py:data:: ALLOWED_SPARK_BINARIES

.. py:class:: SparkSubmitHook(conf = None, conn_id = 'spark_default', files = None, py_files = None, archives = None, driver_class_path = None, jars = None, java_class = None, packages = None, exclude_packages = None, repositories = None, total_executor_cores = None, executor_cores = None, executor_memory = None, driver_memory = None, keytab = None, principal = None, proxy_user = None, name = 'default-name', num_executors = None, status_poll_interval = 1, application_args = None, env_vars = None, verbose = False, spark_binary = None, properties_file = None, yarn_queue = None, deploy_mode = None, *, use_krb5ccache = False, post_submit_commands = None, track_driver_via_k8s_api = False, yarn_track_via_rm_api = False, yarn_rm_auth = None)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseHook`, :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   Wrap the spark-submit binary to kick off a spark-submit job; requires "spark-submit" binary in the PATH.

   :param conf: Arbitrary Spark configuration properties
   :param spark_conn_id: The :ref:`spark connection id <howto/connection:spark>` as configured
       in Airflow administration. When an invalid connection_id is supplied, it will default
       to yarn.
   :param files: Upload additional files to the executor running the job, separated by a
       comma. Files will be placed in the working directory of each executor.
       For example, serialized objects.
   :param py_files: Additional python files used by the job, can be .zip, .egg or .py.
   :param archives: Archives that spark should unzip (and possibly tag with #ALIAS) into
       the application working directory.
   :param driver_class_path: Additional, driver-specific, classpath settings.
   :param jars: Submit additional jars to upload and place them in driver and executor classpaths.
   :param java_class: the main class of the Java application
   :param packages: Comma-separated list of maven coordinates of jars to include on the
       driver and executor classpaths
   :param exclude_packages: Comma-separated list of maven coordinates of jars to exclude
       while resolving the dependencies provided in 'packages'
   :param repositories: Comma-separated list of additional remote repositories to search
       for the maven coordinates given with 'packages'
   :param total_executor_cores: (Standalone & Mesos only) Total cores for all executors
       (Default: all the available cores on the worker)
   :param executor_cores: (Standalone, YARN and Kubernetes only) Number of cores per
       executor (Default: 2)
   :param executor_memory: Memory per executor (e.g. 1000M, 2G) (Default: 1G)
   :param driver_memory: Memory allocated to the driver (e.g. 1000M, 2G) (Default: 1G)
   :param keytab: Full path to the file that contains the keytab
                       (will overwrite any keytab defined in the connection's extra JSON)
   :param principal: The name of the kerberos principal used for keytab
                       (will overwrite any principal defined in the connection's extra JSON)
   :param proxy_user: User to impersonate when submitting the application
   :param name: Name of the job (default airflow-spark)
   :param num_executors: Number of executors to launch
   :param status_poll_interval: Seconds to wait between polls of driver status in cluster
       mode (Default: 1). Controls three polling loops — each enforces its own minimum:

       - Spark standalone driver-status tracker (no minimum)
       - YARN ResourceManager REST API, when ``yarn_track_via_rm_api=True`` (10s minimum)
       - Kubernetes API, when ``track_driver_via_k8s_api=True`` (20s minimum)
   :param application_args: Arguments for the application being submitted
   :param env_vars: Environment variables for spark-submit. It
       supports yarn and k8s mode too.
   :param verbose: Whether to pass the verbose flag to spark-submit process for debugging
   :param spark_binary: The command to use for spark submit.
                        Some distros may use spark2-submit or spark3-submit.
                        (will overwrite any spark_binary defined in the connection's extra JSON)
   :param properties_file: Path to a file from which to load extra properties. If not
                             specified, this will look for conf/spark-defaults.conf.
   :param yarn_queue: The name of the YARN queue to which the application is submitted.
                       (will overwrite any yarn queue defined in the connection's extra JSON)
   :param deploy_mode: Whether to deploy your driver on the worker nodes (cluster) or locally as an client.
                       (will overwrite any deployment mode defined in the connection's extra JSON)
   :param use_krb5ccache: if True, configure spark to use ticket cache instead of relying
       on keytab for Kerberos login
   :param post_submit_commands: Optional list of shell commands to run after the Spark
       job finishes (on both success and on_kill). Useful for cleaning up sidecars such
       as Istio (e.g. ``["curl -X POST localhost:15020/quitquitquit"]``). Each command
       is executed via the shell; failures produce a warning but do not fail the task.
   :param track_driver_via_k8s_api: If True (when master is Kubernetes and
       ``deploy_mode`` is ``cluster``), release the ``spark-submit`` JVM once the
       driver pod has been created, then poll the Kubernetes API for the pod phase
       until the application reaches a terminal state. The polling interval is
       controlled by ``status_poll_interval`` with a 20-second minimum. This frees
       the worker from holding the long-lived submit JVM (~500 MB). Defaults to
       ``False``.
   :param yarn_track_via_rm_api: If True (when master is YARN and ``deploy_mode``
       is ``cluster``), release the ``spark-submit`` JVM once the application has
       been submitted to YARN, then poll the YARN ResourceManager REST API
       (``GET /ws/v1/cluster/apps/{appId}``) until the application reaches a
       final state. The polling interval is controlled by ``status_poll_interval``
       with a 10-second minimum. This frees the worker from holding the
       long-lived submit JVM. Requires the Spark connection's
       ``extra`` JSON to set ``yarn_resourcemanager_webapp_address``
       (e.g. ``http://rm:8088``). Cluster-side driver logs should be used after
       the switch to polling. Defaults to ``False``.
   :param yarn_rm_auth: Optional ``requests.auth.AuthBase`` instance used for
       every call to the YARN ResourceManager REST API (status polling and
       kill). When omitted, Kerberos-enabled Spark connections with both
       ``keytab`` and ``principal`` configured use ``requests-kerberos``
       automatically. Defaults to ``None`` (no auth for non-Kerberos
       connections).


   .. py:attribute:: conn_name_attr
      :value: 'conn_id'



   .. py:attribute:: default_conn_name
      :value: 'spark_default'



   .. py:attribute:: conn_type
      :value: 'spark'



   .. py:attribute:: hook_name
      :value: 'Spark'



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom UI field behaviour for Spark connection.



   .. py:method:: get_connection_form_widgets()
      :classmethod:


      Return connection widgets to add to Spark connection form.



   .. py:attribute:: spark_binary
      :value: None



   .. py:method:: get_conn()

      Return connection for the hook.



   .. py:method:: submit(application = '', **kwargs)

      Remote Popen to execute the spark-submit job.

      :param application: Submitted application, jar or py file
      :param kwargs: extra arguments to Popen (see subprocess.Popen)



   .. py:method:: on_kill()

      Kill Spark submit command.



